@@ -6,6 +6,7 @@ qlcplus (4.14.2) stable; urgency=low
   * engine: input profiles are now loaded from project folder too
   * engine: fix RGB Matrix color lost while editing (thanks to Jurrie Overgoor)
   * engine: fix RGB Matrix dimmer control mode on generic dimmers
+  * UI/Fixture Remap: include channel modifiers when fixture model and mode are the same
   * Virtual Console: add an option to hide Grand Master (thanks to Jurrie Overgoor)
   * Plugins/DMX USB: fix crash with some FTDI adapters
   * Plugins/DMX USB: improve Open DMX timer accuracy (thanks to Basil Hussain)
